--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -2,27 +2,20 @@
 name: Deploy static content to Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 jobs:
-  # Single deploy job since we're just deploying
   deploy:
     environment:
       name: github-pages
@@ -31,13 +24,45 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      # Inject snippet right after <head> in every HTML file
+      - name: Inject snippet after <head>
+        run: |
+          OUT_DIR="."
+          SNIP_FILE="deploy-inject/head-snippet.html"
+
+          if [ ! -f "$SNIP_FILE" ]; then
+            echo "Snippet file not found: $SNIP_FILE" >&2
+            exit 1
+          fi
+
+          SNIP="$(cat "$SNIP_FILE")"
+
+          find "$OUT_DIR" -type f -name "*.html" -print0 | while IFS= read -r -d '' f; do
+            # Skip the snippet file itself if it ends with .html (optional)
+            if [ "$f" = "./$SNIP_FILE" ]; then
+              continue
+            fi
+
+            # Prevent double injection
+            if grep -q "<!--__INJECTED_HEAD_SNIPPET__-->" "$f"; then
+              echo "Already injected: $f"
+              continue
+            fi
+
+            # Insert immediately after <head ...>
+            perl -0777 -i -pe "s|(<head[^>]*>)|\\1\n<!--__INJECTED_HEAD_SNIPPET__-->\n$SNIP\n|i" "$f"
+            echo "Injected: $f"
+          done
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload entire repository
-          path: '.'
+          path: "."
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
