--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -15,23 +15,23 @@ concurrency:
   cancel-in-progress: false
 
 env:
-  # Source folders in THIS repo
   FRONTEND_DIR: "frontend"
   ASSETS_DIR: "assets"
   PUBLIC_API_DIR: "public api"
 
-  # Injection snippet (only applied to frontend HTML)
   SNIP_FILE: "frontend/components/deploy-inject/head-snippet.html"
   MARK: "<!--__INJECTED_FILE_PREFIX__-->"
 
-  # Target repos for subdomains
   ASSETS_REPO: "Unlim8ted-Studio-Productions/assets.unlim8ted.com"
   API_REPO: "Unlim8ted-Studio-Productions/api.unlim8ted.com"
   TARGET_BRANCH: "main"
 
+# ------------------------------------------------------------
+# DEPLOY MAIN SITE (GitHub Pages)
+# ------------------------------------------------------------
 jobs:
   deploy_main_site:
-    name: Deploy unlim8ted.com (from /frontend, with injection)
+    name: Deploy unlim8ted.com
     runs-on: ubuntu-latest
     environment:
       name: github-pages
@@ -49,79 +49,74 @@ jobs:
           mkdir -p dist/frontend
           rsync -a --delete "${FRONTEND_DIR}/" "dist/frontend/"
 
-      - name: Prepend snippet to frontend HTML files ONLY
+      - name: Inject head snippet (frontend HTML only)
         shell: bash
         run: |
           set -euo pipefail
 
           OUT_DIR="dist/frontend"
-          SNIP_FILE="${SNIP_FILE}"
+          SNIP="${SNIP_FILE}"
           MARK="${MARK}"
 
-          if [ ! -f "$SNIP_FILE" ]; then
-            echo "Snippet file not found: $SNIP_FILE" >&2
+          if [ ! -f "$SNIP" ]; then
+            echo "Snippet not found: $SNIP" >&2
             exit 1
           fi
 
-          SNIP="$(cat "$SNIP_FILE")"
+          SNIP_CONTENT="$(cat "$SNIP")"
           SNIP_DIST_PATH="dist/frontend/components/deploy-inject/head-snippet.html"
 
           find "$OUT_DIR" -type f -name "*.html" -print0 | while IFS= read -r -d '' f; do
-            # Skip the snippet file itself
             if [ "$f" = "$SNIP_DIST_PATH" ]; then
               continue
             fi
 
-            # Prevent double injection
             if grep -qF "$MARK" "$f"; then
-              echo "Already injected: $f"
               continue
             fi
 
             tmp="$(mktemp)"
             {
               printf '%s\n' "$MARK"
-              printf '%s\n' "$SNIP"
+              printf '%s\n' "$SNIP_CONTENT"
               cat "$f"
             } > "$tmp"
             mv "$tmp" "$f"
-            echo "Injected: $f"
           done
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
 
-      - name: Upload artifact
+      - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: "dist/frontend"
+          path: dist/frontend
 
-      - name: Deploy to GitHub Pages
-        id: deployment
+      - name: Deploy Pages
         uses: actions/deploy-pages@v4
 
+# ------------------------------------------------------------
+# SYNC SUBDOMAIN REPOS (GitHub App auth, no prompts)
+# ------------------------------------------------------------
   update_subdomain_repos:
-    name: Sync /assets and /public api into their repos (GitHub App auth)
+    name: Sync assets + api subdomains
     runs-on: ubuntu-latest
-    needs: [deploy_main_site]
+    needs: deploy_main_site
     permissions:
       contents: read
 
     steps:
-      - name: Checkout THIS repo
+      - name: Checkout source repo
         uses: actions/checkout@v4
         with:
           persist-credentials: false
 
-      # Set git identity ONCE for this job (prevents "Author identity unknown")
       - name: Configure git identity
-        shell: bash
         run: |
-          set -euo pipefail
           git config --global user.name  "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
-      - name: Create GitHub App token (cross-repo pushes)
+      - name: Create GitHub App token
         id: app-token
         uses: actions/create-github-app-token@v2
         with:
@@ -129,97 +124,64 @@ jobs:
           private-key: ${{ secrets.GH_APP_PRIVATE_KEY }}
           owner: ${{ vars.GH_APP_OWNER }}
 
-      # ----------------------------
-      # Helper: mirror a folder into a target repo and push safely
-      # ----------------------------
+      # ---------------- ASSETS ----------------
       - name: Sync assets.unlim8ted.com
         shell: bash
         env:
           GH_APP_TOKEN: ${{ steps.app-token.outputs.token }}
           REPO: ${{ env.ASSETS_REPO }}
+          SRC: ${{ env.ASSETS_DIR }}
           BRANCH: ${{ env.TARGET_BRANCH }}
-          SRC_DIR: ${{ env.ASSETS_DIR }}
-          DEST_PATH: target-assets
-          COMMIT_MSG: Deploy assets from unlim8ted.com
         run: |
           set -euo pipefail
+          export GIT_TERMINAL_PROMPT=0
 
-          # Fresh checkout of target repo
-          rm -rf "${DEST_PATH}"
-          git clone --depth 1 --branch "${BRANCH}" "https://x-access-token:${GH_APP_TOKEN}@github.com/${REPO}.git" "${DEST_PATH}"
+          rm -rf target-assets
+          git clone "https://x-access-token:${GH_APP_TOKEN}@github.com/${REPO}.git" target-assets
+          cd target-assets
 
-          sync_and_push () {
-            cd "${DEST_PATH}"
+          git checkout "${BRANCH}"
+          git fetch origin "${BRANCH}"
+          git reset --hard "origin/${BRANCH}"
+          git clean -fdx
 
-            # Ensure we are based on the latest remote head
-            git fetch origin "${BRANCH}" --depth 1
-            git checkout "${BRANCH}"
-            git reset --hard "origin/${BRANCH}"
-            git clean -fdx
+          rsync -a --delete "../${SRC}/" "./"
 
-            # Mirror contents
-            rsync -a --delete "../${SRC_DIR}/" "./"
-
-            if git status --porcelain | grep -q .; then
-              git add -A
-              git commit -m "${COMMIT_MSG} (${GITHUB_SHA})"
-
-              # Push (race-safe)
-              git push --force-with-lease origin "${BRANCH}"
-            else
-              echo "No changes to push to ${REPO}."
-            fi
-          }
-
-          # Try once, then retry once if remote moved meanwhile
-          if ! sync_and_push; then
-            echo "First push attempt failed (likely remote moved). Retrying once..."
-            cd ..
-            sync_and_push
+          if git status --porcelain | grep -q .; then
+            git add -A
+            git commit -m "Deploy assets from unlim8ted.com (${GITHUB_SHA})"
+            git push "https://x-access-token:${GH_APP_TOKEN}@github.com/${REPO}.git" "${BRANCH}"
+          else
+            echo "No asset changes."
           fi
 
+      # ---------------- API ----------------
       - name: Sync api.unlim8ted.com
         shell: bash
         env:
           GH_APP_TOKEN: ${{ steps.app-token.outputs.token }}
           REPO: ${{ env.API_REPO }}
+          SRC: ${{ env.PUBLIC_API_DIR }}
           BRANCH: ${{ env.TARGET_BRANCH }}
-          SRC_DIR: ${{ env.PUBLIC_API_DIR }}
-          DEST_PATH: target-api
-          COMMIT_MSG: Deploy public api from unlim8ted.com
         run: |
           set -euo pipefail
+          export GIT_TERMINAL_PROMPT=0
 
-          # Fresh checkout of target repo
-          rm -rf "${DEST_PATH}"
-          git clone --depth 1 --branch "${BRANCH}" "https://x-access-token:${GH_APP_TOKEN}@github.com/${REPO}.git" "${DEST_PATH}"
+          rm -rf target-api
+          git clone "https://x-access-token:${GH_APP_TOKEN}@github.com/${REPO}.git" target-api
+          cd target-api
 
-          sync_and_push () {
-            cd "${DEST_PATH}"
+          git checkout "${BRANCH}"
+          git fetch origin "${BRANCH}"
+          git reset --hard "origin/${BRANCH}"
+          git clean -fdx
 
-            # Ensure we are based on the latest remote head
-            git fetch origin "${BRANCH}" --depth 1
-            git checkout "${BRANCH}"
-            git reset --hard "origin/${BRANCH}"
-            git clean -fdx
+          rsync -a --delete "../${SRC}/" "./"
 
-            # Mirror contents
-            rsync -a --delete "../${SRC_DIR}/" "./"
-
-            if git status --porcelain | grep -q .; then
-              git add -A
-              git commit -m "${COMMIT_MSG} (${GITHUB_SHA})"
-
-              # Push (race-safe)
-              git push --force-with-lease origin "${BRANCH}"
-            else
-              echo "No changes to push to ${REPO}."
-            fi
-          }
-
-          # Try once, then retry once if remote moved meanwhile
-          if ! sync_and_push; then
-            echo "First push attempt failed (likely remote moved). Retrying once..."
-            cd ..
-            sync_and_push
+          if git status --porcelain | grep -q .; then
+            git add -A
+            git commit -m "Deploy public api from unlim8ted.com (${GITHUB_SHA})"
+            git push "https://x-access-token:${GH_APP_TOKEN}@github.com/${REPO}.git" "${BRANCH}"
+          else
+            echo "No API changes."
           fi
