--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -104,7 +104,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [deploy_main_site]
     permissions:
-      contents: read
+      contents: write   # must be write to allow pushes
 
     # Prevent simultaneous runs fighting each other
     concurrency:
@@ -158,15 +158,26 @@ jobs:
           fi
 
           rm -rf "${DEST_PATH}"
-          git clone --depth 1 --branch "${BRANCH}" "${PUSH_URL}" "${DEST_PATH}"
+
+          # Install git-lfs (best-effort; migrating history to LFS is separate)
+          git lfs install || true
+
+          # Clone without shallow depth to avoid pack/index issues on push
+          git clone --branch "${BRANCH}" "${PUSH_URL}" "${DEST_PATH}"
 
           (
             cd "${DEST_PATH}"
 
-            git fetch origin "${BRANCH}" --depth 1
+            # Ensure we are on the branch and match remote
+            git fetch origin "${BRANCH}"
             git checkout "${BRANCH}"
             git reset --hard "origin/${BRANCH}"
             git clean -fdx
+
+            # Helpful git settings for large transfers
+            git config http.postBuffer 524288000
+            git config --local core.compression 0 || true
+            git config --local pack.windowMemory 100m || true
 
             rsync -a --delete "${SRC_PATH}/" "./"
 
@@ -174,8 +185,27 @@ jobs:
               git add -A
               git commit -m "${COMMIT_MSG} (${GITHUB_SHA})"
 
-              # Deployment mirror semantics: overwrite remote to match source exactly
-              git push --force "${PUSH_URL}" "HEAD:${BRANCH}"
+              # Repack/gc to create optimized pack to send to remote
+              git repack -a -d -f --window=250 --max-pack-size=20m || true
+              git gc --aggressive --prune=now || true
+
+              # Retry push (helps with transient remote index-pack failures)
+              set +e
+              PUSH_SUCCESS=1
+              for i in 1 2 3; do
+                echo "Attempt $i: pushing to ${REPO}..."
+                git push --force "${PUSH_URL}" "HEAD:${BRANCH}" && { PUSH_SUCCESS=0; break; }
+                echo "Push failed, running git gc and retrying..."
+                git repack -a -d -f --window=250 --max-pack-size=20m || true
+                git gc --aggressive --prune=now || true
+                sleep 5
+              done
+              set -e
+
+              if [ "${PUSH_SUCCESS}" -ne 0 ]; then
+                echo "Failed to push to ${REPO} after retries." >&2
+                exit 1
+              fi
             else
               echo "No changes to push to ${REPO}."
             fi
@@ -207,15 +237,21 @@ jobs:
           fi
 
           rm -rf "${DEST_PATH}"
-          git clone --depth 1 --branch "${BRANCH}" "${PUSH_URL}" "${DEST_PATH}"
+
+          git lfs install || true
+          git clone --branch "${BRANCH}" "${PUSH_URL}" "${DEST_PATH}"
 
           (
             cd "${DEST_PATH}"
 
-            git fetch origin "${BRANCH}" --depth 1
+            git fetch origin "${BRANCH}"
             git checkout "${BRANCH}"
             git reset --hard "origin/${BRANCH}"
             git clean -fdx
+
+            git config http.postBuffer 524288000
+            git config --local core.compression 0 || true
+            git config --local pack.windowMemory 100m || true
 
             rsync -a --delete "${SRC_PATH}/" "./"
 
@@ -223,8 +259,25 @@ jobs:
               git add -A
               git commit -m "${COMMIT_MSG} (${GITHUB_SHA})"
 
-              # Deployment mirror semantics: overwrite remote to match source exactly
-              git push --force "${PUSH_URL}" "HEAD:${BRANCH}"
+              git repack -a -d -f --window=250 --max-pack-size=20m || true
+              git gc --aggressive --prune=now || true
+
+              set +e
+              PUSH_SUCCESS=1
+              for i in 1 2 3; do
+                echo "Attempt $i: pushing to ${REPO}..."
+                git push --force "${PUSH_URL}" "HEAD:${BRANCH}" && { PUSH_SUCCESS=0; break; }
+                echo "Push failed, running git gc and retrying..."
+                git repack -a -d -f --window=250 --max-pack-size=20m || true
+                git gc --aggressive --prune=now || true
+                sleep 5
+              done
+              set -e
+
+              if [ "${PUSH_SUCCESS}" -ne 0 ]; then
+                echo "Failed to push to ${REPO} after retries." >&2
+                exit 1
+              fi
             else
               echo "No changes to push to ${REPO}."
             fi
